Fix on color for headings on dark mode
Former-commit-id: 6423ba373c7226be0f42ac32e06cfd33d0bc2d77

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -38,6 +38,16 @@ h6 {
   @apply text-base;
 }
 
+/* Dark mode modifiers */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply dark:text-white;
+}
+
 /* Margin modifiers */
 h1:first-child,
 h2:first-child,
